@@ -1,3 +1,10 @@
+2004-07-22  Bastien Nocera  <hadess@hadess.net>
+
+	* data/Makefile.am:
+	* data/totem.desktop.in:
+	* data/totem.desktop.in.in: I'm the first kid on my block to add
+	MimeType= to my .desktop files, I rock
+
 2004-07-19  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-stock-icons.c: (totem_named_icons_init): Use g_str_hash
